<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/intro_background"
        android:contentDescription="@string/da_vinci"
        android:scaleType="fitXY" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/holder_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/davinci_logo"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/da_vinci"
            android:elevation="20dp"
            android:padding="15dp"
            android:src="@drawable/davinci"
            android:tint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/welcome_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/davinci_logo" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/choose_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/welcome_layout" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/buttons"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_layout">

            <androidx.cardview.widget.CardView
                android:id="@+id/click_morning"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:stateListAnimator="@animator/lift_on_touch"
                app:cardCornerRadius="30dp"
                app:cardElevation="6dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.7"
                    android:fontFamily="@font/bariol"
                    android:gravity="center"
                    android:text="@string/turn_morning"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/click_night"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:stateListAnimator="@animator/lift_on_touch"
                app:cardCornerRadius="30dp"
                app:cardElevation="6dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.7"
                    android:fontFamily="@font/bariol"
                    android:gravity="center"
                    android:text="@string/turn_night"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>